--- a/users/templates/users/employerSignup.html
+++ b/users/templates/users/employerSignup.html
@@ -1,17 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>signUP</title>
-</head>
-<body>
-    <form method="post">
-     {% csrf_token %}
-     {{employer_profile_form}}
-     {{user_form}}
-     <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load widget_tweaks %}
+
+{% block content %}
+    <div class="row">
+      <div class="col-12 col-md-6 mx-auto">
+        <div class="card bg-light">
+          <article class="card-body ">
+              <h4 class="card-title mt-3 text-center">Create Account</h4>
+              <hr>
+              
+              <form autocomplete="off" method="POST" novalidate>
+                  {% csrf_token %}
+                    
+                  {% for field in employer_profile_form.visible_fields %}
+                  <div class="form-group">
+                    {{ field.label_tag }}
+              
+                    {% if employer_profile_form.is_bound %}
+                      {% if field.errors %}
+                        {% render_field field class="form-control is-invalid" %}
+                        {% for error in field.errors %}
+                          <div class="invalid-feedback">
+                            {{ error }}
+                          </div>
+                        {% endfor %}
+                      {% else %}
+                        {% render_field field class="form-control is-valid" %}
+                      {% endif %}
+                    {% else %}
+                      {% render_field field class="form-control" %}
+                    {% endif %}
+              
+                    {% if field.help_text %}
+                      <small class="form-text text-muted">{{ field.help_text }}</small>
+                    {% endif %}
+                  </div>
+                {% endfor %}
+  
+                {% for field in user_form.visible_fields %}
+                    <div class="form-group">
+                      {{ field.label_tag }}
+  
+                      {% if user_form.is_bound %}
+                        {% if field.errors %}
+                          {% render_field field class="form-control is-invalid" %}
+                          {% for error in field.errors %}
+                            <div class="invalid-feedback">
+                              {{ error }}
+                            </div>
+                          {% endfor %}
+                        {% else %}
+                          {% render_field field class="form-control is-valid" %}
+                        {% endif %}
+                      {% else %}
+                        {% render_field field class="form-control" %}
+                      {% endif %}
+  
+                      {% if field.help_text %}
+                        <small class="form-text text-muted">{{ field.help_text }}</small>
+                      {% endif %}
+                    </div>
+                  {% endfor %}
+  
+                  <div class="form-group">
+                    <button type="submit" class="btn formButton btn-block">
+                      <span class="glyphicon glyphicon-ok"></span> Register
+                    </button>
+  
+  
+              </form>
+          </article>
+      </div>
+      </div>
+    </div>
+        
+
+
+{% endblock content %}
