--- a/users/templates/users/employerDashboard.html
+++ b/users/templates/users/employerDashboard.html
@@ -16,7 +16,7 @@
                                 <li><a href="{% url 'createEmployee' %}"><i class="fa fa-user-plus"></i> Add Employee</a></li>
                                 <li><a href="{% url 'assetsList' %}"><i class="fa fa-briefcase"></i> Assets</a></li>
                                 <li><a href="{% url 'addAsset' %}"><i class="fa fa-plus-square"></i> Assign Assets</a></li>
-                                <li><a href=""> <i class="fa fa-bell"></i> Notifications</a></li>
+                                <li><a href="{% url 'message' %}"> <i class="fa fa-bell"></i> Notifications <sup id="notify"></sup></a></li>
                             </ul>
                         </div>
                     </div>
